# newstream

./: .gitignore  Makefile.am  README.md  TODO.md  autogen.sh  configure.ac  new-stream
common/: Application.js  BookmarkView.js  ChannelView.js  HistoryView.js  ItemView.js  Layouts.js  Logger.js  MainWindow.js  Makefile.am  Player.js  PlayerEngine.js  Preferences.js  ResultView.js  Search.js  SearchProvider.js  Settings.js  SideMenu.js  SubscriptionView.js  Utils.js
data/: Makefile.am  io.github.konkor.newstream.desktop  stream.ui
data/icons/: Makefile.am
data/themes/: Makefile.am
data/themes/default/: gtk.css
data/themes/tube/: gtk.css
debian/: changelog  control
packaging/: packaging.sh
packaging/debian/: changelog  control  copyright
schemas/: Makefile.am  gschemas.compiled  io.github.konkor.newstream.gschema.xml
