#common classes
commondir = $(datadir)/newstream/common
common_DATA = \
    Application.js \
    BookmarkView.js \
    ChannelView.js \
    HistoryView.js \
    ItemView.js \
    Layouts.js \
    MainWindow.js \
    PlayerEngine.js \
    Player.js \
    ResultView.js \
    Search.js \
    SearchProvider.js \
    Settings.js \
    Utils.js \
    $(NULL)


EXTRA_DIST = \
    $(common_DATA)
